objects/QuoteLineItemCust__c.object
<CustomObject>
    <fields>
        <fullName>Alt_Description__c</fullName>
        <description>Description for alternate product</description>
        <label>Alt Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_UOM_Units__c</fullName>
        <label>Alt UOM Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alt_UOM__c</fullName>
        <description>Alt product UOM</description>
        <label>Alt UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate__c</fullName>
        <description>Alternate product</description>
        <label>Alternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CeilingBasis__c</fullName>
        <label>CeilingBasis</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ceiling_Amount__c</fullName>
        <defaultValue>&quot; &quot;</defaultValue>
        <label>Ceiling.Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreAdjustment_Amount__c</fullName>
        <label>CoreAdjustment.Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Reference_Rep_Sku__c</fullName>
        <label>Cross Reference Rep SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSegmentAdjustment_Amount__c</fullName>
        <label>CustomerSegmentAdjustment.Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSizeAdjustment_Amount__c</fullName>
        <label>CustomerSizeAdjustment.Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Current_Price__c</fullName>
        <label>Customer Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Pack_Quantity__c</fullName>
        <label>Customer Pack Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Product_Description__c</fullName>
        <label>Customer Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Product_Number__c</fullName>
        <label>Customer Product Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_UOM__c</fullName>
        <label>Customer UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloatPrice__c</fullName>
        <defaultValue>&quot;FALSE&quot;</defaultValue>
        <label>FloatPrice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloorBasis__c</fullName>
        <label>FloorBasis</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Amount__c</fullName>
        <label>Floor.Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FutureValue__c</fullName>
        <defaultValue>&quot;FALSE&quot;</defaultValue>
        <label>FutureValue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Reference__c</fullName>
        <label>Line Item Reference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OD_SKU__c</fullName>
        <label>OD SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_UOM__c</fullName>
        <label>OD UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optimized_Price_Option__c</fullName>
        <label>Optimized Price Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Selection_Type__c</fullName>
        <label>Price Selection Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingBasisType__c</fullName>
        <label>PricingBasisType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingMethod__c</fullName>
        <defaultValue>&quot;Fixed Price&quot;</defaultValue>
        <label>PricingMethod</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Basis_Value__c</fullName>
        <formula>UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Basis Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteID__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>QuoteLineItemCusts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RegionalAdjustment_Amount__c</fullName>
        <label>RegionalAdjustment.Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VQuantity__c</fullName>
        <formula>Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>converted_price__c</fullName>
        <label>converted price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cross_reference_derived_sku__c</fullName>
        <label>Cross Reference Derived SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extended_price__c</fullName>
        <label>extended price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fields_VProduct__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#fields:VProduct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>historic_uom__c</fullName>
        <label>historic uom</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>historic_uom_units__c</fullName>
        <label>historic uom units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>important_item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>important item</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Line Item C</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Items C</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>